# mandel-gpu

./: CMakeLists.txt  README.md  frag.glsl  glad.c  glad.h  main.cpp  stb_image.h  vert.glsl
